tests/fixtures/compile_errors/numeric_capacity_mismatch/u32_neg.fe
contract Foo:
    pub def bar() -> u32:
        return u32(-1)